@@ -4,9 +4,9 @@ set HB_INSTALL=\harbour
 set HWGUI_INSTALL=\papps\hwgui_uni
 set SRC_DIR=source
 
-%HB_INSTALL%\bin\harbour %SRC_DIR%\guiserver.prg -n -i%HB_INSTALL%\include;%HWGUI_INSTALL%\include
+%HB_INSTALL%\bin\harbour %SRC_DIR%\guiserver.prg %SRC_DIR%\fconnect.prg -n -q -w2 -i%HB_INSTALL%\include;%HWGUI_INSTALL%\include 2>ah.out
 
-bcc32  -c -O2 -tW -M -I%HB_INSTALL%\include;%HWGUI_INSTALL%\include guiserver.c %SRC_DIR%\hbip.c %SRC_DIR%\listen.c >a1.out
+bcc32  -c -O2 -tW -M -I%HB_INSTALL%\include;%HWGUI_INSTALL%\include guiserver.c fconnect.c %SRC_DIR%\hbip.c %SRC_DIR%\listen.c >a1.out
 
 echo 1 24 "\papps\hwgui_218\image\WindowsXP.Manifest" > hwgui_xp.rc
 rem echo 1 24 "Windows7.Manifest" > hwgui_xp.rc
@@ -14,6 +14,7 @@ brc32 -r hwgui_xp -fohwgui_xp
 
 echo c0w32.obj + > b32.bc
 echo guiserver.obj + >> b32.bc
+echo fconnect.obj + >> b32.bc
 echo listen.obj + >> b32.bc
 echo hbip.obj, + >> b32.bc
 echo guiserver.exe, + >> b32.bc
@@ -49,6 +50,7 @@ ilink32 -Gn -Tpe -aa @b32.bc
 
 @del *.tds
 @del guiserver.c
+@del fconnect.c
 @del *.map
 @del *.obj
 @del *.rc
