@@ -8,9 +8,10 @@ export HARBOUR_LIBS="-lhbdebug -lhbvm -lhbrtl -lgtcgi -lhblang -lhbrdd -lhbmacro
 export HWGUI_LIBS="-lhwgui -lprocmisc -lhbxml -lhwgdebug"
 export SRC_DIR=source
 
-$HB_INS/bin/linux/gcc/harbour $SRC_DIR/guiserver -n  -q -i$HB_INS/include -i$HWGUI_INC -w2 $1 2>bldh.log
+$HB_INS/bin/linux/gcc/harbour $SRC_DIR/guiserver $SRC_DIR/fconnect -n  -q -i$HB_INS/include -i$HWGUI_INC -w2 $1 2>bldh.log
 
-gcc guiserver.c $SRC_DIR/hbip.c $SRC_DIR/listen.c -oguiserver  -I $HB_INS/include -I $HWGUI_INC -I ../../../source/gtk -DHWG_USE_POINTER_ITEM -L $HB_INS/lib/linux/gcc -L $HWGUI_LIB -Wl,--start-group $HWGUI_LIBS $HARBOUR_LIBS $SYSTEM_LIBS -Wl,--end-group `pkg-config --cflags gtk+-2.0` `pkg-config gtk+-2.0 --libs`  >bld.log 2>bld.log
+gcc guiserver.c fconnect.c $SRC_DIR/hbip.c $SRC_DIR/listen.c -oguiserver  -I $HB_INS/include -I $HWGUI_INC -I ../../../source/gtk -DHWG_USE_POINTER_ITEM -L $HB_INS/lib/linux/gcc -L $HWGUI_LIB -Wl,--start-group $HWGUI_LIBS $HARBOUR_LIBS $SYSTEM_LIBS -Wl,--end-group `pkg-config --cflags gtk+-2.0` `pkg-config gtk+-2.0 --libs`  >bld.log 2>bld.log
 
 rm guiserver.c
+rm fconnect.c
 rm *.o
