@@ -1,4 +1,5 @@
 #guiserver=guiserver.exe
+#type=2
 #address=127.0.0.1
 #port=3101
 log=1
